<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/images1"
    tools:context=".ActivityLinear">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/text_frame" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="25sp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/divine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/multiply" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button13"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button11"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/minus"
            android:textColor="#BCAAA4"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button33"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/clear"
            android:textColor="@color/green"
            android:textSize="25sp"
            app:backgroundTint="@color/red" />

        <Button
            android:id="@+id/button16"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/_0" />

        <Button
            android:id="@+id/button15"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            app:backgroundTint="@color/black"
            android:text="@string/dot" />

        <Button
            android:id="@+id/button14"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="25sp"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button34"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:textSize="25sp"
            android:textColor="@color/red"
            app:backgroundTint="@color/green"
            android:text="@string/equals" />
    </LinearLayout>


</LinearLayout>