<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText"
            style="@style/Widget.Design.ScrimInsetsFrameLayout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:autofillHints="false"
            android:background="@drawable/text_frame"
            android:hint="@string/text_view_ru"
            android:inputType="none"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </ScrollView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button26"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="sevenButton"
                android:text="@string/_7"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button19"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="eightButton"
                android:text="@string/_8"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button18"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="nineButton"
                android:text="@string/_9"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="divineButton"
                android:text="@string/divine"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button27"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="fourButton"
                android:text="@string/_4"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button22"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="fiveButton"
                android:text="@string/_5"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button21"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="sixButton"
                android:text="@string/_6"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button17"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="multiplyButton"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button28"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="oneButton"
                android:text="@string/_1"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button24"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="twoButton"
                android:text="@string/_2"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button25"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="threeButton"
                android:text="@string/_3"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button20"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="minusButton"
                android:text="@string/minus"
                android:textColor="#BCAAA4"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button32"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="clear"
                android:text="@string/clear"
                android:textColor="#FF06ED11"
                android:textSize="20sp"
                app:backgroundTint="@color/red" />

            <Button
                android:id="@+id/button31"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="zeroButton"
                android:text="@string/_0"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button30"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="dotButton"
                android:text="@string/dot"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/button23"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="plusButton"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button29"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:onClick="equalsButton"
        android:text="@string/equals"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button29">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:src="@drawable/cat" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>